Use PR_NotifyCondVar when only one worker thread needs to wake up, bug 785206. r=sstangl